--- a/src/components/banner.module.scss
+++ b/src/components/banner.module.scss
@@ -1,11 +1,11 @@
-@import "../sass/variable";
+@import '../sass/variable';
 .container {
   //   background-color: red;
   display: flex;
   align-items: center;
   justify-content: space-between;
   //   height: 30rem;
-  font-family: "poppinfs";
+  font-family: 'poppinfs';
   font-weight: 500;
   font-size: 2rem;
   padding: 5rem 10rem;
@@ -28,5 +28,7 @@
     background-color: $primary-color;
     padding: 0.8rem 2rem;
     color: $white-color;
+    //to be remove letter
+    padding: auto;
   }
 }
