--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,60 @@
-@import "./sass/reset";
+@import './sass/reset';
 body {
   font-weight: 400;
   line-height: 1.7;
   box-sizing: border-box;
-  font-family: "Bebas Neue", cursive, "Poppins", sans-serif;
+  font-family: 'Bebas Neue', cursive, 'Poppins', sans-serif;
+}
+
+.size_1_5 {
+  font-size: 1.5rem !important;
+  width: 100% !important;
+}
+.size_2 {
+  font-size: 2rem !important;
+}
+
+.reset {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.p_m_1 {
+  padding: 1 !important;
+  margin: 1 !important;
+}
+.wt_100 {
+  width: 100% !important;
+}
+
+.white {
+  color: #fff !important;
+}
+.icon__bg {
+  background-color: #c9ddf1 !important;
+
+  padding-top: 1.5rem;
+  display: block;
+  width: 28%;
+  text-align: center;
+}
+
+.bold {
+  font-weight: 500 !important;
+}
+
+.mt_1_5 {
+  margin-top: 1.5rem !important;
+}
+
+.mt_2 {
+  margin-top: 2rem !important;
+}
+
+.mt_2_5 {
+  margin-top: 2.5rem !important;
+}
+
+.mt_3 {
+  margin-top: 3rem !important;
 }
