--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -4,4 +4,5 @@ $grey-color: #e6e6e6;
 $blue-color: #0135ad;
 $red-color: #ff0000;
 $black-color: #000;
+$black-color-200: #575757;
 $white-color: #fff;
