--- a/src/components/card.module.scss
+++ b/src/components/card.module.scss
@@ -19,7 +19,7 @@
   p {
     font-size: 1.5rem;
     color: $black-color-200;
-    width: 50%;
+    // width: 50%;
     margin-bottom: 2rem;
   }
 }
